--- a/index.html
+++ b/index.html
@@ -4,7 +4,76 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Oh my Food</title>
+    <link rel="icon" type="image/x-icon" href="./images/ohmyfood.ico" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="Logo">
+        <a href="index.html"
+          ><img src="./images/ohmyfood.png" alt="On My Food Logo" id="logo"
+        /></a>
+      </div>
+    </header>
+    <main>
+      <div class="menu">
+        <a href="menu.html"
+          ><img
+            class="menuimagemenu"
+            src="./images/lapalettedugout.jpg"
+            alt="La palette du gôut"
+        /></a>
+      </div>
+    </main>
+    <main>
+      <div class="menumenu">
+        <div class="menutext">La palette du gôuts</div>
+        <div class="menutext2">Ménilmontant</div>
+        <div class="menutext3">25€</div>
+      </div>
+    </main>
+    <nav>
+      <div class="menumenu">
+        <div class="menutext">La palette du gôuts</div>
+        <div class="menutext2">Ménilmontant</div>
+        <div class="menutext3">25€</div>
+      </div>
+      <h2>Fonctionnement</h2>
+      <div class="greybutton">Choisissez un restaurant</div>
+      <div class="greybutton">Composez votre menu</div>
+      <div class="greybutton">Dégustez au restaurant</div>
+    </nav>
+
+    <div class="pinkbuttonmenu">Fricassée d'escargot</div>
+    <div class="pinkbuttoncard">La palette du goût</div>
+
+    <h2>Restaurants</h2>
+
+    <main>
+      <div class="menu">
+        <a href="menu.html"
+          ><img
+            class="menuimage"
+            src="./images/lapalettedugout.jpg"
+            alt="La palette du gôut"
+        /></a>
+        <div class="menutext">La palette du gôuts</div>
+        <div class="menutext2">Ménilmontant</div>
+      </div>
+    </main>
+
+    <footer>
+      <a href="index.html"
+        ><img
+          src="./images/ohmyfoodwhite.png"
+          alt="On My Food Logo"
+          id="logofooter"
+      /></a>
+      <div class="footertext">Proposer un restaurant</div>
+      <div class="footertext">Devenir partenaire</div>
+      <div class="footertext">Mentions légales</div>
+      <a href="#">Contact</a>
+    </footer>
+  </body>
 </html>
