--- a/newmenu.html
+++ b/newmenu.html
@@ -8,26 +8,62 @@
     <link rel="stylesheet" href="/newstyle.css" />
   </head>
   <body>
-    <div class="parent">
-      <a href="index.html"
-        ><img
-          class="parent"
-          src="./images/ohmyfood.png"
-          alt="On My Food Logo"
-          id="logo"
-      /></a>
-    </div>
-    <div class="child-one">
-      <a href="menu.html"
-        ><img
-          class="child-one"
-          src="./images/lapalettedugout.jpg"
-          alt="La palette du gôut"
-      /></a>
-    </div>
-    <div class="child-two child">La palette du goût</div>
-    <div class="child-three child">Entrees</div>
+    <header>
+      <div class="parent">
+        <a href="index.html"
+          ><img
+            class="parent"
+            src="./images/ohmyfood.png"
+            alt="On My Food Logo"
+            id="logo"
+        /></a>
+      </div>
+    </header>
+    <article>
+      <div class="child-one">
+        <a href="menu.html"
+          ><img
+            class="child-one"
+            src="./images/lapalettedugout.jpg"
+            alt="La palette du gôut"
+        /></a>
+      </div>
+      <div class="child-two child">La palette du goût</div>
+    </article>
     <nav>
+      <div class="child-three child">ENTRÉES</div>
+      <div class="menumenu">
+        <div class="menutext">Fricassée d'escargot</div>
+        <div class="menutext2">Au piment d'Espelette</div>
+        <div class="menutext3">25€</div>
+      </div>
+      <div class="menumenu">
+        <div class="menutext">Fricassée d'escargot</div>
+        <div class="menutext2">Au piment d'Espelette</div>
+        <div class="menutext3">25€</div>
+      </div>
+      <div class="menumenu">
+        <div class="menutext">Fricassée d'escargot</div>
+        <div class="menutext2">Au piment d'Espelette</div>
+        <div class="menutext3">25€</div>
+      </div>
+      <div class="child-three child">PLATS</div>
+      <div class="menumenu">
+        <div class="menutext">Fricassée d'escargot</div>
+        <div class="menutext2">Au piment d'Espelette</div>
+        <div class="menutext3">25€</div>
+      </div>
+      <div class="menumenu">
+        <div class="menutext">Fricassée d'escargot</div>
+        <div class="menutext2">Au piment d'Espelette</div>
+        <div class="menutext3">25€</div>
+      </div>
+      <div class="menumenu">
+        <div class="menutext">Fricassée d'escargot</div>
+        <div class="menutext2">Au piment d'Espelette</div>
+        <div class="menutext3">25€</div>
+      </div>
+      <div class="child-three child">DESSERTS</div>
       <div class="menumenu">
         <div class="menutext">Fricassée d'escargot</div>
         <div class="menutext2">Au piment d'Espelette</div>
@@ -44,5 +80,20 @@
         <div class="menutext3">25€</div>
       </div>
     </nav>
+    <div class="button">
+      <div class="pinkbutton">Commander</div>
+    </div>
+    <footer>
+      <a href="index.html"
+        ><img
+          src="./images/ohmyfoodwhite.png"
+          alt="On My Food Logo"
+          id="logofooter"
+      /></a>
+      <div class="footertext">Proposer un restaurant</div>
+      <div class="footertext">Devenir partenaire</div>
+      <div class="footertext">Mentions légales</div>
+      <a href="#">Contact</a>
+    </footer>
   </body>
 </html>
