--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <main>
       <div class="menu">
-        <a href="menu.html"
+        <a href="newmenu.html"
           ><img
             class="menuimage"
             src="./images/lapalettedugout.jpg"
