--- a/newmenu.html
+++ b/newmenu.html
@@ -21,7 +21,7 @@
     </header>
     <article>
       <div class="child-one">
-        <a href="menu.html"
+        <a href="newmenu.html"
           ><img
             class="child-one"
             src="./images/lapalettedugout.jpg"
