--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oh my Food</title>
     <link rel="icon" type="image/x-icon" href="./images/ohmyfood.ico" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/boxstyle.css" />
   </head>
   <body>
     <header>
@@ -16,43 +16,63 @@
         /></a>
       </div>
     </header>
-    <main>
-      <div class="menu">
-        <a href="menu.html"
-          ><img
-            class="menuimagemenu"
-            src="./images/lapalettedugout.jpg"
-            alt="La palette du gôut"
-        /></a>
+
+    <div class="location">
+      <form>
+        <i class="fa-solid fa-location-dot"></i>
+        <input type="text" placeholder="      Paris, Belleville" />
+      </form>
+    </div>
+
+    <article>
+      <h2>Réservez le menu qui vous convient</h2>
+      <div class="text">
+        Découvrez des restaurant d'expection, séléctionnés par nos soins.
       </div>
-    </main>
-    <main>
-      <div class="menumenu">
-        <div class="menutext">La palette du gôuts</div>
-        <div class="menutext2">Ménilmontant</div>
-        <div class="menutext3">25€</div>
-      </div>
-    </main>
+      <div class="pinkbutton">Explorer nos restaurants</div>
+    </article>
+
     <nav>
-      <div class="menumenu">
-        <div class="menutext">La palette du gôuts</div>
-        <div class="menutext2">Ménilmontant</div>
-        <div class="menutext3">25€</div>
-      </div>
       <h2>Fonctionnement</h2>
       <div class="greybutton">Choisissez un restaurant</div>
       <div class="greybutton">Composez votre menu</div>
       <div class="greybutton">Dégustez au restaurant</div>
     </nav>
-
-    <div class="pinkbuttonmenu">Fricassée d'escargot</div>
-    <div class="pinkbuttoncard">La palette du goût</div>
-
-    <h2>Restaurants</h2>
-
     <main>
+      <h2>Restaurants</h2>
       <div class="menu">
-        <a href="menu.html"
+        <a href="newmenu.html"
+          ><img
+            class="menuimage"
+            src="./images/lapalettedugout.jpg"
+            alt="La palette du gôut"
+        /></a>
+        <div class="menutext">La palette du gôuts</div>
+        <div class="menutext2">Ménilmontant</div>
+      </div>
+
+      <div class="menu">
+        <a href="newmenu.html"
+          ><img
+            class="menuimage"
+            src="./images/lapalettedugout.jpg"
+            alt="La palette du gôut"
+        /></a>
+        <div class="menutext">La palette du gôuts</div>
+        <div class="menutext2">Ménilmontant</div>
+      </div>
+      <div class="menu">
+        <a href="newmenu.html"
+          ><img
+            class="menuimage"
+            src="./images/lapalettedugout.jpg"
+            alt="La palette du gôut"
+        /></a>
+        <div class="menutext">La palette du gôuts</div>
+        <div class="menutext2">Ménilmontant</div>
+      </div>
+      <div class="menu">
+        <a href="newmenu.html"
           ><img
             class="menuimage"
             src="./images/lapalettedugout.jpg"
@@ -62,7 +82,6 @@
         <div class="menutext2">Ménilmontant</div>
       </div>
     </main>
-
     <footer>
       <a href="index.html"
         ><img
