index et menu updated

--- a/menu.html
+++ b/menu.html
@@ -4,84 +4,85 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Oh my Food</title>
-    <link rel="icon" type="image/x-icon" href="./images/ohmyfood.ico" />
-    <link rel="stylesheet" href="/boxstyle.css" />
+    <title>CSS Position</title>
+    <link rel="stylesheet" href="/menu.css" />
   </head>
   <body>
     <header>
-      <div class="Logo">
+      <div class="parent">
         <a href="index.html"
-          ><img src="./images/ohmyfood.png" alt="On My Food Logo" id="logo"
+          ><img
+            class="parent"
+            src="./images/ohmyfood.png"
+            alt="On My Food Logo"
+            id="logo"
         /></a>
       </div>
     </header>
-
-    <div class="location">
-      <form>
-        <i class="fa-solid fa-location-dot"></i>
-        <input type="text" placeholder="      Paris, Belleville" />
-      </form>
-    </div>
-
     <article>
-      <h2>Réservez le menu qui vous convient</h2>
-      <div class="text">
-        Découvrez des restaurant d'expection, séléctionnés par nos soins.
+      <div class="child-one">
+        <a href="menu.html"
+          ><img
+            class="child-one"
+            src="./images/lapalettedugout.jpg"
+            alt="La palette du gôut"
+        /></a>
       </div>
-      <div class="pinkbutton">Explorer nos restaurants</div>
+      <div class="child-two child">La palette du goût</div>
     </article>
-
     <nav>
-      <h2>Fonctionnement</h2>
-      <div class="greybutton">Choisissez un restaurant</div>
-      <div class="greybutton">Composez votre menu</div>
-      <div class="greybutton">Dégustez au restaurant</div>
+      <div class="child-three child">ENTRÉES</div>
+      <div class="menumenu">
+        <div class="menutext">Fricassée d'escargot</div>
+        <div class="menutext2">Au piment d'Espelette</div>
+        <div class="menutext3">25€</div>
+      </div>
+      <div class="menumenu">
+        <div class="menutext">Fricassée d'escargot</div>
+        <div class="menutext2">Au piment d'Espelette</div>
+        <div class="menutext3">25€</div>
+      </div>
+      <div class="menumenu">
+        <div class="menutext">Fricassée d'escargot</div>
+        <div class="menutext2">Au piment d'Espelette</div>
+        <div class="menutext3">25€</div>
+      </div>
+      <div class="child-three child">PLATS</div>
+      <div class="menumenu">
+        <div class="menutext">Fricassée d'escargot</div>
+        <div class="menutext2">Au piment d'Espelette</div>
+        <div class="menutext3">25€</div>
+      </div>
+      <div class="menumenu">
+        <div class="menutext">Fricassée d'escargot</div>
+        <div class="menutext2">Au piment d'Espelette</div>
+        <div class="menutext3">25€</div>
+      </div>
+      <div class="menumenu">
+        <div class="menutext">Fricassée d'escargot</div>
+        <div class="menutext2">Au piment d'Espelette</div>
+        <div class="menutext3">25€</div>
+      </div>
+      <div class="child-three child">DESSERTS</div>
+      <div class="menumenu">
+        <div class="menutext">Fricassée d'escargot</div>
+        <div class="menutext2">Au piment d'Espelette</div>
+        <div class="menutext3">25€</div>
+      </div>
+      <div class="menumenu">
+        <div class="menutext">Fricassée d'escargot</div>
+        <div class="menutext2">Au piment d'Espelette</div>
+        <div class="menutext3">25€</div>
+      </div>
+      <div class="menumenu">
+        <div class="menutext">Fricassée d'escargot</div>
+        <div class="menutext2">Au piment d'Espelette</div>
+        <div class="menutext3">25€</div>
+      </div>
     </nav>
-    <main>
-      <h2>Restaurants</h2>
-      <div class="menu">
-        <a href="newmenu.html"
-          ><img
-            class="menuimage"
-            src="./images/lapalettedugout.jpg"
-            alt="La palette du gôut"
-        /></a>
-        <div class="menutext">La palette du gôuts</div>
-        <div class="menutext2">Ménilmontant</div>
-      </div>
-
-      <div class="menu">
-        <a href="newmenu.html"
-          ><img
-            class="menuimage"
-            src="./images/lapalettedugout.jpg"
-            alt="La palette du gôut"
-        /></a>
-        <div class="menutext">La palette du gôuts</div>
-        <div class="menutext2">Ménilmontant</div>
-      </div>
-      <div class="menu">
-        <a href="newmenu.html"
-          ><img
-            class="menuimage"
-            src="./images/lapalettedugout.jpg"
-            alt="La palette du gôut"
-        /></a>
-        <div class="menutext">La palette du gôuts</div>
-        <div class="menutext2">Ménilmontant</div>
-      </div>
-      <div class="menu">
-        <a href="newmenu.html"
-          ><img
-            class="menuimage"
-            src="./images/lapalettedugout.jpg"
-            alt="La palette du gôut"
-        /></a>
-        <div class="menutext">La palette du gôuts</div>
-        <div class="menutext2">Ménilmontant</div>
-      </div>
-    </main>
+    <div class="button">
+      <div class="pinkbutton">Commander</div>
+    </div>
     <footer>
       <a href="index.html"
         ><img
