--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oh my Food</title>
     <link rel="icon" type="image/x-icon" href="./images/ohmyfood.ico" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/c06a0e3046.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -20,7 +36,7 @@
     <div class="location">
       <form>
         <i class="fa-solid fa-location-dot"></i>
-        <input type="text" placeholder="      Paris, Belleville" />
+        <div class="textlocation">Paris, Belleville</div>
       </form>
     </div>
 
@@ -38,10 +54,39 @@
       <div class="greybutton">Composez votre menu</div>
       <div class="greybutton">Dégustez au restaurant</div>
     </nav>
-
-    <h2>Restaurants</h2>
-
     <main>
+      <h2>Restaurants</h2>
+      <div class="menu">
+        <a href="menu.html"
+          ><img
+            class="menuimage"
+            src="./images/lapalettedugout.jpg"
+            alt="La palette du gôut"
+        /></a>
+        <div class="menutext">La palette du gôuts</div>
+        <div class="menutext2">Ménilmontant</div>
+      </div>
+
+      <div class="menu">
+        <a href="newmenu.html"
+          ><img
+            class="menuimage"
+            src="./images/lapalettedugout.jpg"
+            alt="La palette du gôut"
+        /></a>
+        <div class="menutext">La palette du gôuts</div>
+        <div class="menutext2">Ménilmontant</div>
+      </div>
+      <div class="menu">
+        <a href="newmenu.html"
+          ><img
+            class="menuimage"
+            src="./images/lapalettedugout.jpg"
+            alt="La palette du gôut"
+        /></a>
+        <div class="menutext">La palette du gôuts</div>
+        <div class="menutext2">Ménilmontant</div>
+      </div>
       <div class="menu">
         <a href="newmenu.html"
           ><img
@@ -53,7 +98,6 @@
         <div class="menutext2">Ménilmontant</div>
       </div>
     </main>
-
     <footer>
       <a href="index.html"
         ><img
