Font Awesome Icons

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Oh my Food</title>
+    <title>Oh my Food - Home Page</title>
     <link rel="icon" type="image/x-icon" href="./images/ohmyfood.ico" />
     <link rel="stylesheet" href="/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -50,9 +50,20 @@
 
     <nav>
       <h2>Fonctionnement</h2>
-      <div class="greybutton">Choisissez un restaurant</div>
-      <div class="greybutton">Composez votre menu</div>
-      <div class="greybutton">Dégustez au restaurant</div>
+      <div class="text1">1</div>
+      <i class="fa-solid fa-1"></i>
+      <div class="greybutton">
+        <i class="fa-solid fa-mobile-screen-button fa-xl"></i> Choisissez un
+        restaurant
+      </div>
+      <i class="fa-solid fa-2"></i>
+      <div class="greybutton">
+        <i class="fa-solid fa-bars fa-xl"></i>Composez votre menu
+      </div>
+      <i class="fa-solid fa-3"></i>
+      <div class="greybutton">
+        <i class="fa-solid fa-store fa-xl"></i>Dégustez au restaurant
+      </div>
     </nav>
     <main>
       <h2>Restaurants</h2>
