--- a/index.html
+++ b/index.html
@@ -26,13 +26,12 @@
   </head>
   <body>
     <header>
-      <div class="Logo">
+      <div class="logo">
         <a href="index.html"
-          ><img src="./images/ohmyfood.png" alt="On My Food Logo" id="logo"
+          ><img src="./images/ohmyfood.png" alt="On My Food Logo" id="logo1"
         /></a>
       </div>
     </header>
-
     <div class="location">
       <form>
         <i class="fa-solid fa-location-dot"></i>
@@ -50,24 +49,57 @@
 
     <nav>
       <h2>Fonctionnement</h2>
-      <div class="text1">1</div>
-      <i class="fa-solid fa-1"></i>
-      <div class="greybutton">
+      <div class="greybutton"><div class="menunumber">1</div>
         <i class="fa-solid fa-mobile-screen-button fa-xl"></i> Choisissez un
-        restaurant
+          restaurant
+        </div>
       </div>
-      <i class="fa-solid fa-2"></i>
-      <div class="greybutton">
+      <div class="greybutton"><div class="menunumber">2</div>
         <i class="fa-solid fa-bars fa-xl"></i>Composez votre menu
       </div>
-      <i class="fa-solid fa-3"></i>
-      <div class="greybutton">
+      <div class="greybutton"><div class="menunumber">3</div>
         <i class="fa-solid fa-store fa-xl"></i>Dégustez au restaurant
       </div>
     </nav>
-    <main>
+    <main>  
       <h2>Restaurants</h2>
       <div class="menu">
+        <div class="box3">
+          <div class="b3">
+            <a href="#">Nouveau</a>
+          </div></div>
+        <a href="menu.html"
+          ><img
+            class="menuimage"
+            src="./images/lapalettedugout.jpg"
+            alt="La palette du gôut"
+        /></a>  
+        <div class="menutext">La palette du gôuts</div>
+        <div class="menutext2">Ménilmontant</div>
+        <div class="icon">
+          <svg class="heart-main" viewBox="0 0 512 512" width="100" title="heart">
+            <path
+              d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
+            />
+          </svg>
+          <svg
+            class="heart-background"
+            viewBox="0 0 512 512"
+            width="100"
+            title="heart"
+          >
+            <path
+              d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
+            />
+          </svg>
+        </div>
+      </div>
+      
+      <div class="menu">
+        <div class="box3">
+          <div class="b3">
+            <a href="#">Nouveau</a>
+          </div></div>
         <a href="menu.html"
           ><img
             class="menuimage"
@@ -76,10 +108,30 @@
         /></a>
         <div class="menutext">La palette du gôuts</div>
         <div class="menutext2">Ménilmontant</div>
+        <div class="icon">
+          <svg class="heart-main" viewBox="0 0 512 512" width="100" title="heart">
+            <path
+              d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
+            />
+          </svg>
+          <svg
+            class="heart-background"
+            viewBox="0 0 512 512"
+            width="100"
+            title="heart"
+          >
+            <path
+              d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
+            />
+          </svg>
+        </div>
       </div>
-
       <div class="menu">
-        <a href="newmenu.html"
+        <div class="box3">
+          <div class="b3">
+            <a href="#">Nouveau</a>
+          </div></div>
+        <a href="menu.html"
           ><img
             class="menuimage"
             src="./images/lapalettedugout.jpg"
@@ -87,9 +139,30 @@
         /></a>
         <div class="menutext">La palette du gôuts</div>
         <div class="menutext2">Ménilmontant</div>
+        <div class="icon">
+          <svg class="heart-main" viewBox="0 0 512 512" width="100" title="heart">
+            <path
+              d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
+            />
+          </svg>
+          <svg
+            class="heart-background"
+            viewBox="0 0 512 512"
+            width="100"
+            title="heart"
+          >
+            <path
+              d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
+            />
+          </svg>
+        </div>
       </div>
       <div class="menu">
-        <a href="newmenu.html"
+        <div class="box3">
+          <div class="b3">
+            <a href="#">Nouveau</a>
+          </div></div>
+        <a href="menu.html"
           ><img
             class="menuimage"
             src="./images/lapalettedugout.jpg"
@@ -97,16 +170,23 @@
         /></a>
         <div class="menutext">La palette du gôuts</div>
         <div class="menutext2">Ménilmontant</div>
-      </div>
-      <div class="menu">
-        <a href="newmenu.html"
-          ><img
-            class="menuimage"
-            src="./images/lapalettedugout.jpg"
-            alt="La palette du gôut"
-        /></a>
-        <div class="menutext">La palette du gôuts</div>
-        <div class="menutext2">Ménilmontant</div>
+        <div class="icon">
+          <svg class="heart-main" viewBox="0 0 512 512" width="100" title="heart">
+            <path
+              d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
+            />
+          </svg>
+          <svg
+            class="heart-background"
+            viewBox="0 0 512 512"
+            width="100"
+            title="heart"
+          >
+            <path
+              d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
+            />
+          </svg>
+        </div>
       </div>
     </main>
     <footer>
@@ -116,10 +196,11 @@
           alt="On My Food Logo"
           id="logofooter"
       /></a>
-      <div class="footertext">Proposer un restaurant</div>
-      <div class="footertext">Devenir partenaire</div>
+      <div class="footertext"><i class="fa-solid fa-utensils fa-l"></i>
+        Proposer un restaurant</div>
+      <div class="footertext"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</div>
       <div class="footertext">Mentions légales</div>
-      <a href="#">Contact</a>
+      <a href="mailto:contact@ohmyfood.com">Contact</a>
     </footer>
   </body>
 </html>
