--- a/menu.html
+++ b/menu.html
@@ -6,9 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oh my Food - Menu</title>
     <link rel="stylesheet" href="/menu.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/c06a0e3046.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
+      <a href="index.html"><i class="fa-solid fa-arrow-left xl"></i></a>
       <div class="parent">
         <a href="index.html"
           ><img
@@ -29,6 +46,23 @@
         /></a>
       </div>
       <div class="child-two child">La palette du goût</div>
+      <div class="icon">
+        <svg class="heart-main" viewBox="0 0 512 512" width="100" title="heart">
+          <path
+            d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
+          />
+        </svg>
+        <svg
+          class="heart-background"
+          viewBox="0 0 512 512"
+          width="100"
+          title="heart"
+        >
+          <path
+            d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
+          />
+        </svg>
+      </div>
     </article>
     <nav>
       <div class="child-three child">ENTRÉES</div>
@@ -38,46 +72,48 @@
         <div class="menutext3">25€</div>
       </div>
       <div class="menumenu">
-        <div class="menutext">Fricassée d'escargot</div>
-        <div class="menutext2">Au piment d'Espelette</div>
-        <div class="menutext3">25€</div>
+        <div class="menutext">Foie gras de canard mi-cuit</div>
+        <div class="menutext2">Et ses copeaux de truffe noire</div>
+        <div class="menutext3">35€</div>
       </div>
       <div class="menumenu">
-        <div class="menutext">Fricassée d'escargot</div>
-        <div class="menutext2">Au piment d'Espelette</div>
-        <div class="menutext3">25€</div>
+        <div class="b1">
+          <div class="menutext">Oeuf au plat</div>
+          <div class="menutext2">Assaisonné à la truffe sur lit de caviar</div>
+          <div class="menutext3">20€</div>
+        </div>
       </div>
       <div class="child-three child">PLATS</div>
       <div class="menumenu">
-        <div class="menutext">Fricassée d'escargot</div>
-        <div class="menutext2">Au piment d'Espelette</div>
-        <div class="menutext3">25€</div>
+        <div class="menutext">Filet de boeuf aux herbes</div>
+        <div class="menutext2">Accompagné de sa ribambelle de légumes</div>
+        <div class="menutext3">40€</div>
       </div>
       <div class="menumenu">
-        <div class="menutext">Fricassée d'escargot</div>
-        <div class="menutext2">Au piment d'Espelette</div>
-        <div class="menutext3">25€</div>
+        <div class="menutext">Parmentier de queue de boeuf</div>
+        <div class="menutext2">À la truffe noire sur sa purée de panais</div>
+        <div class="menutext3">35€</div>
       </div>
       <div class="menumenu">
-        <div class="menutext">Fricassée d'escargot</div>
-        <div class="menutext2">Au piment d'Espelette</div>
-        <div class="menutext3">25€</div>
+        <div class="menutext">Filet de turbot</div>
+        <div class="menutext2">Aux agrumes</div>
+        <div class="menutext3">44€</div>
       </div>
       <div class="child-three child">DESSERTS</div>
       <div class="menumenu">
-        <div class="menutext">Fricassée d'escargot</div>
-        <div class="menutext2">Au piment d'Espelette</div>
-        <div class="menutext3">25€</div>
+        <div class="menutext">Paris-Brest</div>
+        <div class="menutext2">Revisité</div>
+        <div class="menutext3">18€</div>
       </div>
       <div class="menumenu">
-        <div class="menutext">Fricassée d'escargot</div>
-        <div class="menutext2">Au piment d'Espelette</div>
-        <div class="menutext3">25€</div>
+        <div class="menutext">Macaron au chocolat d'exception</div>
+        <div class="menutext2">Et glace à la vanille de Madagascar</div>
+        <div class="menutext3">22€</div>
       </div>
       <div class="menumenu">
-        <div class="menutext">Fricassée d'escargot</div>
-        <div class="menutext2">Au piment d'Espelette</div>
-        <div class="menutext3">25€</div>
+        <div class="menutext">Mousse au chocolat</div>
+        <div class="menutext2">Au piment d'Espelette et à la truffe noire</div>
+        <div class="menutext3">23€</div>
       </div>
     </nav>
     <div class="button">
@@ -90,10 +126,14 @@
           alt="On My Food Logo"
           id="logofooter"
       /></a>
-      <div class="footertext">Proposer un restaurant</div>
-      <div class="footertext">Devenir partenaire</div>
+      <div class="footertext">
+        <i class="fa-solid fa-utensils fa-l"></i> Proposer un restaurant
+      </div>
+      <div class="footertext">
+        <i class="fa-solid fa-handshake-angle"></i>Devenir partenaire
+      </div>
       <div class="footertext">Mentions légales</div>
-      <a href="#">Contact</a>
+      <a href="mailto:contact@ohmyfood.com">Contact</a>
     </footer>
   </body>
 </html>
