--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
         <a href="menu.html"
           ><img
             class="menuimage"
-            src="./images/lapalettedugout.jpg"
+            src="./images/lanoteenchantee.jpg"
             alt="La palette du gôut"
         /></a>
-        <div class="menutext">La palette du gôuts</div>
-        <div class="menutext2">Ménilmontant</div>
+        <div class="menutext">La note enchantée</div>
+        <div class="menutext2">Charonne</div>
         <div class="icon">
           <svg class="heart-main" viewBox="0 0 512 512" width="100" title="heart">
             <path
@@ -134,11 +134,11 @@
         <a href="menu.html"
           ><img
             class="menuimage"
-            src="./images/lapalettedugout.jpg"
+            src="./images/alafrancaise.jpg"
             alt="La palette du gôut"
         /></a>
-        <div class="menutext">La palette du gôuts</div>
-        <div class="menutext2">Ménilmontant</div>
+        <div class="menutext">À la française</div>
+        <div class="menutext2">Cité Rouge</div>
         <div class="icon">
           <svg class="heart-main" viewBox="0 0 512 512" width="100" title="heart">
             <path
@@ -165,11 +165,11 @@
         <a href="menu.html"
           ><img
             class="menuimage"
-            src="./images/lapalettedugout.jpg"
+            src="./images/ledelicedessens.jpg"
             alt="La palette du gôut"
         /></a>
-        <div class="menutext">La palette du gôuts</div>
-        <div class="menutext2">Ménilmontant</div>
+        <div class="menutext">Le délice des sens</div>
+        <div class="menutext2">Folie-Méricourt</div>
         <div class="icon">
           <svg class="heart-main" viewBox="0 0 512 512" width="100" title="heart">
             <path
