menu animation update

--- a/menu.html
+++ b/menu.html
@@ -66,54 +66,161 @@
     </article>
     <nav>
       <div class="child-three child">ENTRÉES</div>
-      <div class="menumenu">
-        <div class="menutext">Fricassée d'escargot</div>
-        <div class="menutext2">Au piment d'Espelette</div>
-        <div class="menutext3">25€</div>
-      </div>
-      <div class="menumenu">
-        <div class="menutext">Foie gras de canard mi-cuit</div>
-        <div class="menutext2">Et ses copeaux de truffe noire</div>
-        <div class="menutext3">35€</div>
-      </div>
-      <div class="menumenu">
-        <div class="b1">
-          <div class="menutext">Oeuf au plat</div>
-          <div class="menutext2">Assaisonné à la truffe sur lit de caviar</div>
-          <div class="menutext3">20€</div>
+      <div class="menu onebyone" id="case-1">
+        <div class="menucard">
+          <div class="dish">
+            <div class="dishname">
+              <p>Fricassée d'escargot</p>
+            </div>
+            <div class="dishtitle">
+              <p>Au piment d'Espelette
+              </p>
+            </div>
+          </div>
+            <div class="price">25€</div>
+          </div>
+          <div class="check">
+            <i class="fas fa-check-circle"></i>
+          </div>
         </div>
-      </div>
+      <div class="menu onebyone" id="case-2">
+        <div class="menucard">
+          <div class="dish">
+            <div class="dishname">
+              <p>Foie gras de canard mi-cuit</p>
+            </div>
+            <div class="dishtitle">
+              <p>Et ses copeaux de truffe noire
+              </p>
+            </div>
+          </div>
+            <div class="price">35€</div>
+          </div>
+          <div class="check">
+            <i class="fas fa-check-circle"></i>
+          </div>
+        </div>
+      <div class="menu onebyone" id="case-3">
+        <div class="menucard">
+          <div class="dish">
+            <div class="dishname">
+              <p>Oeuf au plat</p>
+            </div>
+            <div class="dishtitle">
+              <p>Assaisonné à la truffe sur lit de caviar
+              </p>
+            </div>
+          </div>
+            <div class="price">20€</div>
+          </div>
+          <div class="check">
+            <i class="fas fa-check-circle"></i>
+          </div>
+        </div>
       <div class="child-three child">PLATS</div>
-      <div class="menumenu">
-        <div class="menutext">Filet de boeuf aux herbes</div>
-        <div class="menutext2">Accompagné de sa ribambelle de légumes</div>
-        <div class="menutext3">40€</div>
-      </div>
-      <div class="menumenu">
-        <div class="menutext">Parmentier de queue de boeuf</div>
-        <div class="menutext2">À la truffe noire sur sa purée de panais</div>
-        <div class="menutext3">35€</div>
-      </div>
-      <div class="menumenu">
-        <div class="menutext">Filet de turbot</div>
-        <div class="menutext2">Aux agrumes</div>
-        <div class="menutext3">44€</div>
-      </div>
+      <div class="menu onebyone" id="case-4">
+        <div class="menucard">
+          <div class="dish">
+            <div class="dishname">
+              <p>Filet de boeuf aux herbes</p>
+            </div>
+            <div class="dishtitle">
+              <p>Accompagné de sa ribambelle de légumes
+              </p>
+            </div>
+          </div>
+            <div class="price">40€</div>
+          </div>
+          <div class="check">
+            <i class="fas fa-check-circle"></i>
+          </div>
+        </div>
+      <div class="menu onebyone" id="case-5">
+        <div class="menucard">
+          <div class="dish">
+            <div class="dishname">
+              <p>Parmentier de queue de boeuf</p>
+            </div>
+            <div class="dishtitle">
+              <p>À la truffe noire sur sa purée de panais
+              </p>
+            </div>
+          </div>
+            <div class="price">35€</div>
+          </div>
+          <div class="check">
+            <i class="fas fa-check-circle"></i>
+          </div>
+        </div>
+      <div class="menu onebyone" id="case-6">
+        <div class="menucard">
+          <div class="dish">
+            <div class="dishname">
+              <p>Filet de turbot</p>
+            </div>
+            <div class="dishtitle">
+              <p>Aux agrumes
+              </p>
+            </div>
+          </div>
+            <div class="price">44€</div>
+          </div>
+          <div class="check">
+            <i class="fas fa-check-circle"></i>
+          </div>
+        </div>
       <div class="child-three child">DESSERTS</div>
-      <div class="menumenu">
-        <div class="menutext">Paris-Brest</div>
-        <div class="menutext2">Revisité</div>
-        <div class="menutext3">18€</div>
-      </div>
-      <div class="menumenu">
-        <div class="menutext">Macaron au chocolat d'exception</div>
-        <div class="menutext2">Et glace à la vanille de Madagascar</div>
-        <div class="menutext3">22€</div>
-      </div>
-      <div class="menumenu">
-        <div class="menutext">Mousse au chocolat</div>
-        <div class="menutext2">Au piment d'Espelette et à la truffe noire</div>
-        <div class="menutext3">23€</div>
+      <div class="menu onebyone" id="case-7">
+        <div class="menucard">
+          <div class="dish">
+            <div class="dishname">
+              <p>Paris-Brest</p>
+            </div>
+            <div class="dishtitle">
+              <p>Revisité
+              </p>
+            </div>
+          </div>
+            <div class="price">18€</div>
+          </div>
+          <div class="check">
+            <i class="fas fa-check-circle"></i>
+          </div>
+        </div>
+      <div class="menu onebyone" id="case-8">
+        <div class="menucard">
+          <div class="dish">
+            <div class="dishname">
+              <p>Macaron au chocolat d'exception</p>
+            </div>
+            <div class="dishtitle">
+              <p>Et glace à la vanille de Madagascar
+              </p>
+            </div>
+          </div>
+            <div class="price">22€</div>
+          </div>
+          <div class="check">
+            <i class="fas fa-check-circle"></i>
+          </div>
+        </div>
+      <div class="menu onebyone" id="case-9">
+        <div class="menucard">
+          <div class="dish">
+            <div class="dishname">
+              <p>Mousse au chocolat </p>
+            </div>
+            <div class="dishtitle">
+              <p>Au piment d'Espelette et à la truffe noire
+              </p>
+            </div>
+          </div>
+            <div class="price">23€</div>
+          </div>
+          <div class="check">
+            <i class="fas fa-check-circle"></i>
+          </div>
+        </div>
       </div>
     </nav>
     <div class="button">
