--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     ></script>
   </head>
   <body>
+    <div class="bowlbackground">
+      <div class="bowl">
+        <div class="bowlinside"></div>
+      </div>
+    </div>
     <header>
       <div class="logo">
         <a href="index.html"
