index mobile update

--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
       </div>
       <div class="pinkbutton">Explorer nos restaurants</div>
     </article>
-
     <nav>
+      <div>
       <h2>Fonctionnement</h2>
+    </div>
       <div class="greybutton"><div class="menunumber">1</div>
         <i class="fa-solid fa-mobile-screen-button fa-xl"></i> Choisissez un
           restaurant
@@ -66,8 +67,10 @@
         <i class="fa-solid fa-store fa-xl"></i>Dégustez au restaurant
       </div>
     </nav>
-    <main>  
+    <div class="title">
       <h2>Restaurants</h2>
+    </div>
+    <main>
       <div class="menu">
         <div class="box3">
           <div class="b3">
