menu desktop update

--- a/menu.html
+++ b/menu.html
@@ -45,7 +45,9 @@
             alt="La palette du gôut"
         /></a>
       </div>
-      <div class="child-two child">La palette du goût</div>
+    </div>
+      <div class="child-two child">La palette du goût
+    </div>
       <div class="icon">
         <svg class="heart-main" viewBox="0 0 512 512" width="100" title="heart">
           <path
